--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap');
 
 * {
     font-family: "Press Start 2P", serif;
@@ -10,6 +11,7 @@
 :root {
     --color-de-fondo: #5D04D9;
     --color-de-texto-blanco: #E5E5E5;
+    --color-azul: #03318C;
 }
 
 body {
@@ -18,6 +20,9 @@ body {
 
 
 /* Para dispositivos móviles */
+
+
+/* ---------------------------- Cabecera ---------------------------- */
 
 .cabecera {
     background-color: var(--color-de-fondo);
@@ -36,6 +41,74 @@ body {
     font-size: 1.5rem;
     color: var(--color-de-texto-blanco);
 }
+
+/* ---------------------------- Main - Añadir Productos ---------------------------- */
+
+main {
+    display: flex;
+    justify-content: center;
+}
+
+.productos-agregar {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    max-width: 34rem;
+    padding: 2.5rem;
+    gap: 2.5rem;
+}
+
+.productos-agregar__titulo {
+    font-size: 1.5rem;
+    text-align: center;
+}
+
+.productos-agregar__formulario {
+    display: flex;
+    flex-direction: column;
+    gap: 2.5rem;
+}
+
+.productos-agregar__campo {
+    padding: 1.2rem;
+    border-radius: 1.8rem;
+    font-family: "IBM Plex Mono", serif;
+    color: var(--color-azul);
+    border: 3px solid var(--color-azul);
+    font-weight: 600;
+}
+
+.productos-agregar__campo::placeholder {
+    color: var(--color-azul);
+    font-weight: 600;
+}
+
+.productos-agregar__botones {
+    display: flex;
+    justify-content: center;
+    gap: 0.8rem;
+}
+
+.productos-agregar__boton {
+    width: 10.25rem;
+    font-family: "IBM Plex Mono", serif;
+    padding: 1rem;
+    border: 3px solid var(--color-azul);
+    border-radius: 0.9rem;
+    background-color: white;
+    font-size: 1.25rem;
+}
+
+.productos-agregar__enviar {
+    background-color: var(--color-azul);
+    color: white;
+}
+
+.productos-agregar__limpiar {
+    color: var(--color-azul);
+}
+
+
 
 
 /* Para pantallas grandes */
