Implementación de añadir productos y ajustes de CSS

--- a/styles.css
+++ b/styles.css
@@ -217,6 +217,11 @@ main {
 
     .productos__card {
         width: 30%;
+        height: 45vh;
+    }
+
+    .productos__img {
+        height: 28vh;
     }
 
 }
