--- a/styles.css
+++ b/styles.css
@@ -16,6 +16,8 @@
 
 body {
     width: 100%;
+    
+    min-height: 100vh;
 }
 
 
@@ -132,23 +134,37 @@ main {
     padding: 0.9rem; /*y 3.4*/
     display: flex;
     flex-wrap: wrap;
-    gap: 5.5rem 0.625rem ;
+    gap: 5.5rem 1rem ;
+    justify-content: center;
+    
 }
 
 .productos__card {
     background-color: var(--color-de-fondo);
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
     border-radius: 0.625rem;
     padding: 0.625rem;
     border: 3px solid black;
-    width: 48%;
+    flex: 1 1 calc(50% - 16px);
     color: white;
     font-size: 0.9rem;
+    flex-grow: initial;
+}
+
+.card-container--img {
+    width: 100%;
+    height: 100%; 
+    border-radius: 0.625rem;
+    border: 3px solid black;
+    display: flex;
+    justify-content: center;
 }
 
 .productos__img {
     width: 100%;
     border-radius: 0.625rem;
-    border: 3px solid black;
 }
 
 .producto__nombre {
@@ -170,6 +186,10 @@ main {
     display: flex;
     flex-direction: column;
     gap: 1rem;
+}
+
+.footer__titulo {
+    font-size: 2rem;
 }
 
 .footer__contenedor__logo {
@@ -199,29 +219,39 @@ main {
     }
 
     .productos {
-        padding: 2.5rem;
+        padding: 2.3rem;
         order: 1;
         max-width: none;
     }
 
     .productos__list {
         box-shadow: -5px 5px 10px gray;
-        height: 100vh; /* Define una altura fija para el contenedor */
         overflow-y: auto; /* Activa el scroll vertical */
+        justify-content: start;
+        gap: 0.5rem;
     }
+
+    .productos__card {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        flex: 1 1 calc(33.333% - 16px);
+        height: auto;
+        flex-grow: initial;
+    }
+
+    .producto__nombre {
+        min-height: 3rem;
+    }
+
 
     .productos-agregar{
         order: 2;
         width: 35%;
     }
 
-    .productos__card {
-        width: 30%;
-        height: 46vh;
-    }
-
     .productos__img {
-        height: 28vh;
+        height: auto;
     }
 
 }
